# party-protest

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  test_event.json
.cargo/: config.toml
.github/workflows/: check_rust.yml  clippy_lint.yml
api/: Cargo.toml
api/src/: event_handler.rs
application/: Cargo.toml
application/src/event/: create.rs  delete.rs  publish.rs  read.rs
data/: database.db
domain/: Cargo.toml
domain/src/: models.rs  schema.rs
infrastructure/: Cargo.toml  diesel.toml
infrastructure/migrations/2024-09-19-141042_create_events/: up.sql
infrastructure/migrations/2024-10-04-203153_create_events/: down.sql  up.sql
infrastructure/migrations/2024-10-06-154219_create_events/: down.sql  up.sql
infrastructure/src/: lib.rs  setup_db.rs
shared/: Cargo.toml
shared/src/: response_models.rs
src/: main.rs  schema.rs
