[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
diesel = { version = "2.2", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
serde = { version = "1.0", features = ["derive"] }
native_db = "0.7"
native_model = "0.4"
uuid = { version = "1.10", features = ["v7"] }
chrono = "0.4"
